# CodePulse

./: .gitignore  CLAUDE.md  DEVELOPMENT.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/api/: .env.example  Dockerfile  demo_proposal.py  pyproject.toml  render.yaml  requirements.txt
apps/api/app/: config.py  main.py
apps/api/app/algorithms/: clustering.py  duplicate.py  graph.py  language_detector.py  similarity.py  sm2.py  summarizer.py  tfidf.py
apps/api/app/models/: schemas.py
apps/api/app/routes/: clusters.py  detect_language.py  duplicate.py  graph.py  review.py  search.py  summarize.py
apps/api/tests/: test_api.py  test_clustering.py  test_duplicate.py  test_edge_cases.py  test_graph.py  test_language_detector.py  test_sm2.py  test_summarizer.py  test_system.py  test_tfidf.py
apps/api/tests/fixtures/: sample_snippets.json
apps/web/: components.json  middleware.ts  next.config.mjs  package.json  pnpm-lock.yaml  proxy.ts  vercel.json
apps/web/__tests__/: duplicate-warning.test.tsx  edge-cases.test.tsx  review-card.test.tsx  search-view.test.tsx  snippet-editor.validation.test.ts  stats-cards.test.tsx
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: ColorBends.tsx  activity-feed.tsx  app-breadcrumb.tsx  cluster-view.tsx  code-display.tsx  confirm-dialog.tsx  dependency-graph.tsx  due-badge.tsx  duplicate-warning.tsx  editor-toolbar.tsx  providers.tsx  review-activity.tsx  review-card.tsx  review-heatmap.tsx  review-session.tsx  search-view.tsx  (+7 more)
supabase/migrations/: 20260529_add_activity_logs.sql
(+62 files in other folders)
